--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
      <link href="https: //fonts.googleapis.com/css2? family= Fredoka+One & family= Mochiy+Pop+P+One & family= Roboto:ital@0;1 & display=swap &family= Secolare+Uno & display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="flex">
+
+        <header>
+            <div></div>
+        </header>
+        <main>
+            <a class="btn-upgrade" href="#!">EFFETTUA L'UPGRADE</a>
+            <aside></aside>
+    
+        </main>
+    </div>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
