add-aside-mobile

--- a/index.html
+++ b/index.html
@@ -15,17 +15,26 @@
      <link href="https: //fonts.googleapis.com/css2? family= Fredoka+One & family= Mochiy+Pop+P+One & family= Roboto:ital@0;1 & display=swap &family= Secolare+Uno & display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="flex">
+    <header>
+        <a class="btn-upgrade" href="#!">EFFETTUA L'UPGRADE</a>
+        <div class="container-header"></div>
+    </header>    
+    <aside>
+        <div class="container-aside">
+            <div><img src="img/favicon.ico" alt=""></div>
+            <div><a href=""><i class="fa-sharp fa-solid fa-house"></i></a></div>
+            <div><a href=""><i class="fa-sharp fa-solid fa-magnifying-glass"></i></a></div>
+            <div><a href=""><i class="fa-solid fa-lines-leaning"></i></a></div>
+            <div class="icon-bottom" >
+                <div><i class="fa-solid fa-arrow-down"></i></div>
+                <div><a href=""><i class="fa-solid fa-circle-user"></i></a></div>
+            </div>
+        </div>
 
-        <header>
-            <div></div>
-        </header>
-        <main>
-            <a class="btn-upgrade" href="#!">EFFETTUA L'UPGRADE</a>
-            <aside></aside>
+    </aside>
+    <main>
     
-        </main>
-    </div>
+    </main>
     <footer>
 
     </footer>
