--- a/index.html
+++ b/index.html
@@ -30,9 +30,18 @@
                 <div><a href=""><i class="fa-solid fa-circle-user"></i></a></div>
             </div>
         </div>
-
     </aside>
     <main>
+        <nav>
+            <ul>
+                <li><a href="">IN EVIDENZA <hr></a></li>
+                <li><a href="">PODCAST</a></li>
+                <li><a href="">CLASSIFICHE</a></li>
+                <li><a href="">GENERI E MOOD</a></li>
+                <li><a href="">NUOVE USCITE</a></li>
+                <li><a href="">SCOPRI</a></li>
+            </ul>
+        </nav>
     
     </main>
     <footer>
