--- a/index.html
+++ b/index.html
@@ -42,7 +42,67 @@
                 <li><a href="">SCOPRI</a></li>
             </ul>
         </nav>
-    
+        <div>
+            <h1>Recently played</h1>
+            <div class="container1-main">
+                <div class="photo-flex">
+                    <img src="img/metal_lifting.jpg" alt="#!">
+                    <h2>Heavy Metal</h2>
+                    <h5>Subtitle</h5>
+                </div>
+                <div class="photo-flex">
+                    <img src="img/stranger.jpeg" alt="#!">
+                    <h2>Stranger Things, Vol. 1 (a Netflix Original
+                        Series Soundtrack)
+                    </h2>
+                    <h5>Kyle Dixon & Michael Stein</h5>
+                </div>
+                <div class="photo-flex">
+                    <img src="img/aquietplace.jpeg" alt="#!">
+                    <h2>A quiet place</h2>
+                    <h5>Subtitle</h5>
+                </div>
+                <div class="photo-flex">
+                    <img src="img/split.jpeg" alt="#!">
+                    <h2>Split</h2>
+                    <h5>Subtitle</h5>
+                </div>
+                <div class="photo-flex">
+                    <img src="img/cure.jpeg" alt="#!">
+                    <h2>A cure for wellness</h2>
+                    <h5>Subtitle</h5>
+                </div>
+                <div class="photo-flex">
+                    <img src="img/sinister.jpeg" alt="#!">
+                    <h2>Sinister</h2>
+                    <h5>Subtitle</h5>
+                </div>
+            </div>
+            <h1>Creato per John Doe</h1>
+            <h5>Più ascolti,più accurati saranno i suggerimenti.</h5>
+            <div class="container1-main">
+                <div class="photo-flex">
+                    <img src="img/radar.jpeg" alt="#!">
+                    <h2>Release Radar</h2>
+                </div>
+                <div class="photo-flex">
+                    <img src="img/mixdaily.jpeg" alt="#!">
+                    <h2>Daily Mix1</h2>
+                </div>
+            </div>
+            <h1>Artisti più popolari</h1>
+            <h5>Più ascolti,più accurati saranno i suggerimenti.</h5>
+            <div class="container1-main">
+                <div class="photo-flex">
+                    <img class="circle-img" src="img/youg.jpeg" alt="#!">
+                    <h2>Lana del Rey</h2>
+                </div>
+                <div class="photo-flex">
+                    <img class="circle-img" src="img/einaudi.jpeg" alt="#!">
+                    <h2>Ludovico Einaudi</h2>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
