add-footer-mobile

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https: //fonts.googleapis.com/css2? family= Fredoka+One & family= Mochiy+Pop+P+One & family= Roboto:ital@0;1 & display=swap &family= Secolare+Uno & display=swap" rel="stylesheet">
+     <!--  -->
+     
 </head>
 <body>
     <header>
@@ -42,7 +44,7 @@
                 <li><a href="">SCOPRI</a></li>
             </ul>
         </nav>
-        <div>
+        <section>
             <h1>Recently played</h1>
             <div class="container1-main">
                 <div class="photo-flex">
@@ -78,6 +80,8 @@
                     <h5>Subtitle</h5>
                 </div>
             </div>
+        </section>
+        <section>
             <h1>Creato per John Doe</h1>
             <h5>Più ascolti,più accurati saranno i suggerimenti.</h5>
             <div class="container1-main">
@@ -90,6 +94,8 @@
                     <h2>Daily Mix1</h2>
                 </div>
             </div>
+        </section>
+        <section>
             <h1>Artisti più popolari</h1>
             <h5>Più ascolti,più accurati saranno i suggerimenti.</h5>
             <div class="container1-main">
@@ -102,11 +108,50 @@
                     <h2>Ludovico Einaudi</h2>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <footer>
-
+        <section class="footer-flex1">
+            <img src="img/sinister.jpeg" alt="">
+            <div>
+                <h2>Sinister</h2>
+                <h5>Brano <br> Nome</h5>
+            </div>
+            <div class="icon-ft-sec1">
+                <div>
+                    <a href="#!"><i class="fa-regular fa-heart"></i></a>
+                </div>
+                <div>
+                    <a href="#!"><i class="fa-regular fa-folder"></i></a>
+                </div>
+            </div>
+        </section>
+        <section class="footer-flex2">
+            <div><a href="#!"><i class="fa-solid fa-shuffle"></i></a></div>
+            <div><a href="#!"><i class="fa-solid fa-backward-fast"></i></a></div>
+            <div><a href="#!"><i class="fa-solid fa-play"></i></a></div>
+            <div><a href="#!"><i class="fa-solid fa-forward-fast"></i></a></div>
+            <div><a href="#!"><i class="fa-solid fa-rotate-right"></i></a></div>
+            <div class="flex-audio">
+                <h6>0:25</h6>
+                <div class="container-audio">
+                    <div class="volume-bar">
+                        <div class="bottom" ></div>
+                    </div>
+                </div>
+                <h6>4:35</h6>
+            </div>
+        </section>
+        <section class="footer-flex3">
+            <div><a href="#!"><i class="fa-solid fa-list"></i></a></div>
+            <div><a href="#!"><i class="fa-solid fa-desktop"></i></a></div>
+            <div><a href="#!"><i class="fa-solid fa-volume-high"></i></a></div>
+            <div class="container-audio">
+                <div class="volume-bar">
+                    <div class="bottom" ></div>
+                </div>
+            </div>
+        </section>
     </footer>
-    
 </body>
 </html>
