add-version639px

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https: //fonts.googleapis.com/css2? family= Fredoka+One & family= Mochiy+Pop+P+One & family= Roboto:ital@0;1 & display=swap &family= Secolare+Uno & display=swap" rel="stylesheet">
-     <!--  -->
-     
 </head>
 <body>
     <header>
@@ -30,6 +28,45 @@
             <div class="icon-bottom" >
                 <div><i class="fa-solid fa-arrow-down"></i></div>
                 <div><a href=""><i class="fa-solid fa-circle-user"></i></a></div>
+            </div>
+        </div>
+        <div class="container-aside2">
+            <div class="logo-aside2"><img src="img/logo.svg" alt=""></div>
+            <div class="box-aside2">
+                <img class="img-aside2" src="img/home.svg" alt="#!">
+                <h5>Home</h5>
+            </div>
+            <div class="box2-aside2">
+                <img  class="img-aside2"src="img/search.svg" alt="#!">
+                <h5>Cerca</h5>
+            </div>
+            <div class="box2-aside2">
+                <img class="img-aside2" src="img/libreria.svg" alt="#!">
+                <h5>La tua libreria</h5>
+            </div>
+            <h2 class="title-aside2">PLAYLIST</h2>
+            <div class="square-aside2">
+                <a href="#!"><i class="fa-solid fa-square-plus"></i></a>
+                <h5>Crea Playlist</h5>
+            </div>
+            <ul>
+                <il>Nome Playlist</il>
+                <il>Nome Playlist</il>
+                <il>Nome Playlist</il>
+                <il>Nome Playlist</il>
+                <il>Nome Playlist</il>
+                <il>Nome Playlist</il>
+                <li>Nome Playlist</li>
+            </ul>
+            <div>
+                <div class="box3-aside2">
+                    <div><i class="fa-solid fa-arrow-down"></i></div>
+                    <h5>Istalla app</h5>
+                </div>
+                <div class="box4-aside2">
+                    <div><a href=""><i class="fa-solid fa-circle-user"></i></a></div>
+                    <h2 >John Doe</h2>
+                </div>
             </div>
         </div>
     </aside>
