add-aside2-hover

--- a/index.html
+++ b/index.html
@@ -50,18 +50,17 @@
                 <h5>Crea Playlist</h5>
             </div>
             <ul>
-                <il>Nome Playlist</il>
-                <il>Nome Playlist</il>
-                <il>Nome Playlist</il>
-                <il>Nome Playlist</il>
-                <il>Nome Playlist</il>
-                <il>Nome Playlist</il>
-                <li>Nome Playlist</li>
-            </ul>
+                <li> <a href="">Nome Playlist</a></li>
+                <li> <a href="">Nome Playlist</a></li>
+                <li> <a href="">Nome Playlist</a></li>
+                <li> <a href="">Nome Playlist</a></li>
+                <li> <a href="">Nome Playlist</a></li>
+                <li> <a href="">Nome Playlist</a></li>
+                <li> <a href="">Nome Playlist</a></li>
             <div>
                 <div class="box3-aside2">
                     <div><i class="fa-solid fa-arrow-down"></i></div>
-                    <h5>Istalla app</h5>
+                    <a href="">Istalla app</a> 
                 </div>
                 <div class="box4-aside2">
                     <div><a href=""><i class="fa-solid fa-circle-user"></i></a></div>
@@ -85,34 +84,52 @@
             <h1>Recently played</h1>
             <div class="container1-main">
                 <div class="photo-flex">
-                    <img src="img/metal_lifting.jpg" alt="#!">
+                    <div class="play">
+                        <img src="img/metal_lifting.jpg" alt="#!">
+                        <a class="i-below" href="#!"><i class="fa-solid fa-play"></i></a>
+                    </div>
                     <h2>Heavy Metal</h2>
                     <h5>Subtitle</h5>
                 </div>
                 <div class="photo-flex">
-                    <img src="img/stranger.jpeg" alt="#!">
+                    <div class="play">
+                        <img src="img/stranger.jpeg" alt="#!">
+                        <a class="i-below" href="#!"><i class="fa-solid fa-play"></i></a>
+                    </div>
                     <h2>Stranger Things, Vol. 1 (a Netflix Original
                         Series Soundtrack)
                     </h2>
                     <h5>Kyle Dixon & Michael Stein</h5>
                 </div>
                 <div class="photo-flex">
-                    <img src="img/aquietplace.jpeg" alt="#!">
+                    <div class="play">
+                        <img src="img/aquietplace.jpeg" alt="#!">
+                        <a class="i-below" href="#!"><i class="fa-solid fa-play"></i></a>
+                    </div>
                     <h2>A quiet place</h2>
                     <h5>Subtitle</h5>
                 </div>
                 <div class="photo-flex">
-                    <img src="img/split.jpeg" alt="#!">
+                    <div class="play">
+                        <img src="img/split.jpeg" alt="#!">
+                        <a class="i-below" href="#!"><i class="fa-solid fa-play"></i></a>
+                    </div>
                     <h2>Split</h2>
                     <h5>Subtitle</h5>
                 </div>
                 <div class="photo-flex">
-                    <img src="img/cure.jpeg" alt="#!">
+                    <div class="play">
+                        <img src="img/cure.jpeg" alt="#!">
+                        <a class="i-below" href="#!"><i class="fa-solid fa-play"></i></a>
+                    </div>
                     <h2>A cure for wellness</h2>
                     <h5>Subtitle</h5>
                 </div>
                 <div class="photo-flex">
-                    <img src="img/sinister.jpeg" alt="#!">
+                    <div class="play">
+                        <img src="img/sinister.jpeg" alt="#!">
+                        <a class="i-below" href="#!"><i class="fa-solid fa-play"></i></a>
+                    </div>
                     <h2>Sinister</h2>
                     <h5>Subtitle</h5>
                 </div>
@@ -122,12 +139,18 @@
             <h1>Creato per John Doe</h1>
             <h5>Più ascolti,più accurati saranno i suggerimenti.</h5>
             <div class="container1-main">
-                <div class="photo-flex">
-                    <img src="img/radar.jpeg" alt="#!">
+                <div class="photo-flex1">
+                    <div class="play">
+                        <img src="img/radar.jpeg" alt="#!">
+                        <a class="i-below" href="#!"><i class="fa-solid fa-play"></i></a>
+                    </div>
                     <h2>Release Radar</h2>
                 </div>
-                <div class="photo-flex">
-                    <img src="img/mixdaily.jpeg" alt="#!">
+                <div class="photo-flex1">
+                    <div class="play">
+                        <img src="img/mixdaily.jpeg" alt="#!">
+                        <a class="i-below" href="#!"><i class="fa-solid fa-play"></i></a>
+                    </div>
                     <h2>Daily Mix1</h2>
                 </div>
             </div>
@@ -136,12 +159,18 @@
             <h1>Artisti più popolari</h1>
             <h5>Più ascolti,più accurati saranno i suggerimenti.</h5>
             <div class="container1-main">
-                <div class="photo-flex">
-                    <img class="circle-img" src="img/youg.jpeg" alt="#!">
+                <div class="photo-flex2">
+                    <div class="play">
+                        <img class="circle-img" src="img/youg.jpeg" alt="#!">
+                        <a class="i-below" href="#!"><i class="fa-solid fa-play"></i></a>
+                    </div>
                     <h2>Lana del Rey</h2>
                 </div>
-                <div class="photo-flex">
-                    <img class="circle-img" src="img/einaudi.jpeg" alt="#!">
+                <div class="photo-flex2">
+                    <div class="play">
+                        <img class="circle-img" src="img/einaudi.jpeg" alt="#!">
+                        <a class="i-below" href="#!"><i class="fa-solid fa-play"></i></a>
+                    </div>
                     <h2>Ludovico Einaudi</h2>
                 </div>
             </div>
