--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
     <footer>
         <section class="footer-flex1">
             <img src="img/sinister.jpeg" alt="">
-            <div>
+            <div class="footer-text">
                 <h2>Sinister</h2>
-                <h5>Brano <br> Nome</h5>
+                <h5>Brano Nome</h5>
             </div>
             <div class="icon-ft-sec1">
                 <div>
@@ -202,7 +202,7 @@
                 <h6>0:25</h6>
                 <div class="container-audio">
                     <div class="volume-bar">
-                        <div class="bottom" ></div>
+                        <div class="bottom"></div>
                     </div>
                 </div>
                 <h6>4:35</h6>
@@ -214,7 +214,7 @@
             <div><a href="#!"><i class="fa-solid fa-volume-high"></i></a></div>
             <div class="container-audio">
                 <div class="volume-bar">
-                    <div class="bottom" ></div>
+                    <div class="bottom2" ></div>
                 </div>
             </div>
         </section>
